Slider finished in the mobile version

--- a/index.html
+++ b/index.html
@@ -68,74 +68,37 @@
                           CONTENT
 =========================================================-->
     <section id="content">
-        <div data-src="images/slider1.png">
-            <div class="caption fadeIn">
-                <div class="container">
-                    <span class="first">Paixão pela Vida</span>
-                    <span class="second">inspirada por si</span>
-                </div>
+        <div class="img-container">
+            <img src="images/baby.jpeg">
+            <div class="teaser">
+                <span class="first">Paixão pela Vida</span>
+                <span class="second">inspirada por si</span>
             </div>
-        </div>
-        <div class="carousel">
-            <button class="carouselLeftButton"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
-            <div class="carouselTrackConteiner">
-                <div class="carouselTrack">
-                    <div class="carouselSlide currentSlide">
-                        <a href="specialties.html">
-                            <img src="images/page4_img4.png" alt="" />
-                            <h2 class="carouselText">Ginecologia</h2>
-                        </a>
-                    </div>
-                    <div class="carouselSlide">
-                        <a href="specialties.html">
-                            <img src="images/page1_img1.png" alt="" />
-                            <h2 class="carouselText">Obstetrícia</h2>
-                        </a>
-                    </div>
-                    <div class="carouselSlide">
-                        <a href="specialties.html">
-                            <img src="images/page1_img2.png" alt="" />
-                            <h2 class="carouselText">Pediatria</h2>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <button class="carouselRightButton"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
-        </div>
-        <div style="height: 200px;">
         </div>
         <div class="wrapper1">
-            <div class="container">
-                <div class="box1-wrapper1">
-                    <div class="box1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
-                        <img src="images/page4_img4.png" alt="" />
-                        <div class="content content__inset1 maxheight">
-                            <h5>
-                                <a href="specialists.html#kiko">Ginecologia</a>
-                            </h5>
-                        </div>
-                    </div>
-                    <div class="box1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-                        <img src="images/page1_img1.png" alt="" />
-                        <div class="content content__inset2 maxheight">
-                            <h5>
-                                <a href="index-3.html">Obstetrícia</a>
-                            </h5>
-                        </div>
-                    </div>
-
-                    <div class="box1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.3s">
-                        <img src="images/page1_img2.png" alt="" />
-                        <div class="content content__inset3 maxheight">
-                            <h5>
+            <div class="slider">
+                <div class="wrapper">
+                    <div class="slides">
+                        <span class="slide"><img src="images/page4_img4.png" alt="" />
+                            <h2 class="sliderText gine">
+                                <a href="specialties.html">Ginecologia</a>
+                            </h2>
+                        </span>
+                        <span class="slide"><img src="images/page1_img1.png" alt="" />
+                            <h2 class="sliderText obs">
+                                <a href="specialties.html">Obstetrícia</a>
+                            </h2>
+                        </span>
+                        <span class="slide"><img src="images/page1_img2.png" alt="" />
+                            <h2 class="sliderText ped">
                                 <a href="specialties.html">Pediatria</a>
-                            </h5>
-
-                        </div>
+                            </h2>
+                        </span>
                     </div>
                 </div>
+                <a class="control prev"></a>
+                <a class="control next"></a>
             </div>
-        </div>
         </div>
         <div class="wrapper2 wrapper2__inset1">
             <div class="container">
