--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                           HEADER
 =========================================================-->
     <header id="header">
-        <div class="logo">
+        <div id="logo">
             <h1 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.1s">
                 <a href="index.html">
                     <span class="second">Clínica</span>
@@ -102,14 +102,14 @@
         </div>
         <div class="wrapper2 wrapper2__inset1">
             <div class="container">
-                <div class="heading1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+                <div class="heading1 wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
                     <h2>A nossa Missão</h2>
                 </div>
                 <div class="box4-wrapper1">
                     <div class="box4">
-                        <img class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s" src="images/page2_img1.png"
-                            alt="" />
-                        <h6 class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+                        <img class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s"
+                            src="images/page2_img1.png" alt="" />
+                        <h6 class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s">
                             Na Clínica Gynébe todos os colaboradores estão vocacionados e orientados para o
                             servir melhor através de uma ampla oferta de serviços necessários à mulher e à
                             criança.
@@ -123,11 +123,11 @@
         </div>
         <div class="wrapper3">
             <div class="container">
-                <div class="heading2 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+                <div class="heading2 wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
                     <h5>A Equipa</h5>
                 </div>
                 <div class="box3-wrapper1">
-                    <div class="box3 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+                    <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
                         <img src="images/page1_img4.png" alt="" />
                         <h3>
                             <a>Dra. Manuela Calado Araújo</a>
@@ -135,7 +135,7 @@
                         <p>Ginecologista/Obstetra</p>
                     </div>
 
-                    <div class="box3 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s">
                         <img src="images/page1_img5.png" alt="" />
                         <h3>
                             <a>Dra. Gabriela Vascolcellos</a>
@@ -143,7 +143,7 @@
                         <p>Pediatra/Neonatologista</p>
                     </div>
 
-                    <div class="box3 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.3s">
+                    <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.3s">
                         <img src="images/page1_img6.png" alt="" />
                         <h3>
                             <a>Dra. Ana Carriço</a>
@@ -152,7 +152,7 @@
                         <p>Cardiologista Pedriátrica</p>
                     </div>
 
-                    <div class="box3 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
                         <img src="images/page1_img7.png" alt="" />
                         <h3>
                             <a>Dra. Leonilde Coelho</a>
@@ -160,28 +160,28 @@
                         <br>
                         <p>Endocrinologista</p>
                     </div>
-                    <div class="box3 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
                         <img src="images/page1_img7.png" alt="" />
                         <h3>
                             <a>Dra. Dília Soares</a>
                         </h3>
                         <p>Nutricionista</p>
                     </div>
-                    <div class="box3 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
                         <img src="images/page1_img7.png" alt="" />
                         <h3>
                             <a>Dra. Marta Baltar</a>
                         </h3>
                         <p>Psicologa/Psicoterapeuta</p>
                     </div>
-                    <div class="box3 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
                         <img src="images/page1_img7.png" alt="" />
                         <h3>
                             <a>Secretaria</a>
                         </h3>
                         <p>Assistente Operacional</p>
                     </div>
-                    <div class="box3 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
                         <img src="images/page1_img7.png" alt="" />
                         <h3>
                             <a>Francisco Araújo</a>
@@ -193,58 +193,58 @@
         </div>
         <div class="wrapper4">
             <div class="container">
-                <div class="heading1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+                <div class="heading1 wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
                     <h2>Providing the best of care</h2>
                 </div>
                 <div class="list1-wrapper1">
                     <ul class="list1">
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.1s">
                             <a>Quico, o Grande</a>
                         </li>
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.2s">
                             <a>Sed do eiusmod</a>
                         </li>
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.3s">
                             <a href="#">Conse ctetur</a>
                         </li>
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
                             <a href="#">Adipisicing</a>
                         </li>
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.5s">
                             <a href="#">Elit sed do eiusmod</a>
                         </li>
                     </ul>
                     <ul class="list1">
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.1s">
                             <a href="#">Leite condensado é vida</a>
                         </li>
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.2s">
                             <a href="#">Incididunt ut</a>
                         </li>
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.3s">
                             <a href="#">Labore</a>
                         </li>
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
                             <a href="#">Et dolore magna</a>
                         </li>
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.5s">
                             <a href="#">Ut enim</a>
                         </li>
                     </ul>
                     <ul class="list1">
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.1s">
                             <a href="#">Leite condensado é amor</a>
                         </li>
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.2s">
                             <a href="#">Quis nostrud</a>
                         </li>
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.3s">
                             <a href="#">Exercitation</a>
                         </li>
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
                             <a href="#">Ullamco laboris nisi</a>
                         </li>
-                        <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
+                        <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.5s">
                             <a href="#">Ut aliqu</a>
                         </li>
                     </ul>
@@ -263,33 +263,33 @@
                 <div class="footer_menu">
                     <div class="socials">
                         <ul class="socials1">
-                            <li class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.1s">
+                            <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
                                 <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
                                         class="fa fa-facebook"></i></a></li>
-                            <li class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
-                                        class="fa fa-twitter"></i></a></li>
+                            <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
+                                        class="fa fa-instagram"></i></a></li>
                         </ul>
                     </div>
                     <nav>
                         <ul>
-                            <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s"><a
+                            <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s"><a
                                     href="index.html">Início</a></li>
-                            <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s"><a
+                            <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a
                                     href="specialties.html">Especialidades</a></li>
-                            <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s"><a
+                            <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.3s"><a
                                     href="agreements.html">Convenções</a></li>
-                            <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s"><a
+                            <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.5s"><a
                                     href="contacts.html">Contactos</a></li>
                         </ul>
                     </nav>
                 </div>
-                <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s">Lorem ipsum dolor
+                <p class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">Lorem ipsum dolor
                     sit
                     amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                     dolore
                     magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc.</p>
             </div>
-            <div class="privacy-block wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s">
+            <div class="privacy-block wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
                 <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year"></span>. <a
                     href="privacy.html">Política de Privacidade </a><br><a>Design by Francisco Araújo</a>
             </div>
@@ -297,6 +297,7 @@
     </footer>
     <script src="js/app.js"></script>
     <script src="js/carousel.js"></script>
+    <script src="js/intersectionObservers.js"></script>
 </body>
 
 </html>
