Media queries partially done

--- a/agreements.html
+++ b/agreements.html
@@ -93,7 +93,7 @@
               <div class="box2-wrapper1">
                 <div class="grid_3">
                   <div class="box2 box2__inset1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
-                    <img src="/images/advancecare.png" alt="AdvanceCare - Gestão de Serviços de Saúde, S.A." />
+                    <img src="images/advancecare.png" alt="AdvanceCare - Gestão de Serviços de Saúde, S.A." />
                   </div>
                 </div>
                 <div class="grid_9">
@@ -108,21 +108,21 @@
               <div class="box2-wrapper6">
                 <div class="grid_2">
                   <div class="box2 box2__inset1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
-                    <img src="/images/açoreana.png" alt="Açoreana" />
-                    <img src="/images/ccmo.jpeg" alt="CCMO-MUTUELLE" />
-                    <img src="/images/cimpor.png" alt="Cimpor - Cimentos de Portugal, S.A." />
-                    <img src="/images/generali.png" alt="Generalicare" />
-                    <img src="/images/tranquilidade.png" alt="Tranquilidade" />
-                    <img src="/images/lusitania.png" alt="Lusitania - Companhia de Seguros, S.A." />
-                    <img src="/images/mgen.png" alt="MGEN - Mutuelle Générale de l'Éducation Nationale" />
-                    <img src="/images/popular.png" alt="Popular Seguros- Companhia de Seguros, S.A. " />
-                    <img src="/images/real.png" alt="Real Vida Seguros" />
-                    <img src="/images/gnb.png" alt="GNB - Companhia de Seguros, S.A" />
-                    <img src="/images/gps.jpg" alt="Grumo Groupama" />
-                    <img src="/images/logo.jpg" alt="Logo" />
-                    <img src="/images/n_seguros.png" alt="N Seguros, S.A" />
-                    <img src="/images/eurovida.jpg" alt="Eurovida – Companhia de Seguros de Vida, S.A" />
-                    <img src="/images/sams.png"
+                    <img src="images/açoreana.png" alt="Açoreana" />
+                    <img src="images/ccmo.jpeg" alt="CCMO-MUTUELLE" />
+                    <img src="images/cimpor.png" alt="Cimpor - Cimentos de Portugal, S.A." />
+                    <img src="images/generali.png" alt="Generalicare" />
+                    <img src="images/tranquilidade.png" alt="Tranquilidade" />
+                    <img src="images/lusitania.png" alt="Lusitania - Companhia de Seguros, S.A." />
+                    <img src="images/mgen.png" alt="MGEN - Mutuelle Générale de l'Éducation Nationale" />
+                    <img src="images/popular.png" alt="Popular Seguros- Companhia de Seguros, S.A. " />
+                    <img src="images/real.png" alt="Real Vida Seguros" />
+                    <img src="images/gnb.png" alt="GNB - Companhia de Seguros, S.A" />
+                    <img src="images/gps.jpg" alt="Grumo Groupama" />
+                    <img src="images/logo.jpg" alt="Logo" />
+                    <img src="images/n_seguros.png" alt="N Seguros, S.A" />
+                    <img src="images/eurovida.jpg" alt="Eurovida – Companhia de Seguros de Vida, S.A" />
+                    <img src="images/sams.png"
                       alt="SAMS - Serviços de Assistência Médico-Social do Sindicato dos Bancários Sul e Ilhas" />
                   </div>
                 </div>
@@ -149,7 +149,7 @@
               <div class="box2-wrapper1">
                 <div class="grid_3">
                   <div class="box2 box2__inset1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-                    <img src="/images/future.png" alt="Future Healthcare" />
+                    <img src="images/future.png" alt="Future Healthcare" />
                   </div>
                 </div>
                 <div class="grid_9">
@@ -164,8 +164,8 @@
                 <div class="box2-wrapper6">
                   <div class="grid_2">
                     <div class="box2 box2__inset1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-                      <img src="/images/saude.png" alt="Saúde Prime" />
-                      <img src="/images/victoria.png" alt="Victoria" />
+                      <img src="images/saude.png" alt="Saúde Prime" />
+                      <img src="images/victoria.png" alt="Victoria" />
                     </div>
                   </div>
                   <div class="grid_10">
@@ -179,7 +179,7 @@
                 <div class="box2-wrapper1">
                   <div class="grid_3">
                     <div class="box2 box2__inset1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.3s">
-                      <img src="/images/medis.png" alt="Médis - Companhia Portuguesa de Seguros de Saúde, S.A." />
+                      <img src="images/medis.png" alt="Médis - Companhia Portuguesa de Seguros de Saúde, S.A." />
                     </div>
                   </div>
                   <div class="grid_9">
@@ -195,10 +195,10 @@
                 <div class="box2-wrapper6">
                   <div class="grid_2">
                     <div class="box2 box2__inset1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.3s">
-                      <img src="/images/ageas.png" alt="Ageas Seguros" />
-                      <img src="/images/ctt.png" alt="CTT - Médis" />
-                      <img src="/images/liberty.png" alt="Liberty Seguros" />
-                      <img src="/images/zurich.png" alt="Zurich" />
+                      <img src="images/ageas.png" alt="Ageas Seguros" />
+                      <img src="images/ctt.png" alt="CTT - Médis" />
+                      <img src="images/liberty.png" alt="Liberty Seguros" />
+                      <img src="images/zurich.png" alt="Zurich" />
                     </div>
                   </div>
                   <div class="grid_10">
@@ -214,11 +214,11 @@
                 <div class="box2-wrapper1">
                   <div class="grid_3">
                     <div class="box2 box2__inset2 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
-                      <img src="/images/rna.png" alt="RNA Medical" />
-                      <img src="/images/allianz.png" alt="Allianz Saúde" />
-                      <img src="/images/sams_sib.png" alt="SAMS-SIB" />
-                      <img src="/images/medicare.jpg" alt="Medicare" />
-                      <img src="/images/ami.png" alt="Assistência Médica Internacional" />
+                      <img src="images/rna.png" alt="RNA Medical" />
+                      <img src="images/allianz.png" alt="Allianz Saúde" />
+                      <img src="images/sams_sib.png" alt="SAMS-SIB" />
+                      <img src="images/medicare.jpg" alt="Medicare" />
+                      <img src="images/ami.png" alt="Assistência Médica Internacional" />
                     </div>
                   </div>
                   <div class="grid_9">
@@ -297,7 +297,7 @@
   <!--[if lt IE 9]>
 <script src="js/html5shiv.js"></script>
 <div id="ie6-alert" style="width: 100%; text-align:center;">
-    <img src="http://beatie6.frontcube.com/images/ie6.jpg" alt="Upgrade IE 6" width="640" height="344" border="0"
+    <img src="http://beatie6.frontcube.comimages/ie6.jpg" alt="Upgrade IE 6" width="640" height="344" border="0"
          usemap="#Map" longdesc="http://die6.frontcube.com"/>
     <map name="Map" id="Map">
         <area shape="rect" coords="496,201,604,329"
