--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700">
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
     <!-- endbuild -->
-
+    <script src="https://kit.fontawesome.com/9e78371ef2.js" crossorigin="anonymous"></script>
 </head>
 
 
@@ -50,18 +50,19 @@
                 <div class="line"></div>
             </div>
             <ul class="sf-menu">
-                <li class="current"><a href="index.html">Início</a></li>
-                <li><a href="specialties.html">Especialidades</a></li>
-                <li><a href="agreements.html">Convenções</a></li>
-                <li><a href="galeria.html">Clínicas</a></li>
-                <li><a href="contacts.html">Contactos</a>
-                    <ul>
+                <li class="nav-link current" data-nav="products"><a href="index.html">Início</a></li>
+                <li class="nav-link" data-nav="developers"><a href="specialties.html">Especialidades</a></li>
+                <li class="nav-link" data-nav="company"><a href="agreements.html">Convenções</a></li>
+                <li class="nav-link" data-nav="products2"><a href="galeria.html">Clínicas</a></li>
+                <li class="nav-link" data-nav="developers2"><a href="contacts.html">Contactos</a>
+                    <!-- <ul>
                         <li><a href="contacts.html">Porto</a></li>
                         <li><a href="contacts_santo_tirso.html">Santo Tirso</a></li>
-                    </ul>
+                    </ul> -->
                 </li>
             </ul>
         </nav>
+
     </header>
 
     <!--========================================================
@@ -69,7 +70,8 @@
 =========================================================-->
     <section id="content">
         <div class="img-container">
-            <img src="images/baby.jpeg">
+            <img src="images/baby.jpeg" alt="">
+            <!-- https://unsplash.com/photos/p76UivR30oo -->
             <div class="teaser">
                 <span class="first">Paixão pela Vida</span>
                 <span class="second">inspirada por si</span>
@@ -199,52 +201,67 @@
                 <div class="list1-wrapper1">
                     <ul class="list1">
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.1s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a>Quico, o Grande</a>
                         </li>
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.2s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a>Sed do eiusmod</a>
                         </li>
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.3s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a href="#">Conse ctetur</a>
                         </li>
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a href="#">Adipisicing</a>
                         </li>
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.5s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a href="#">Elit sed do eiusmod</a>
                         </li>
                     </ul>
                     <ul class="list1">
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.1s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a href="#">Leite condensado é vida</a>
                         </li>
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.2s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a href="#">Incididunt ut</a>
                         </li>
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.3s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a href="#">Labore</a>
                         </li>
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a href="#">Et dolore magna</a>
                         </li>
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.5s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a href="#">Ut enim</a>
                         </li>
                     </ul>
                     <ul class="list1">
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.1s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a href="#">Leite condensado é amor</a>
                         </li>
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.2s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a href="#">Quis nostrud</a>
                         </li>
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.3s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a href="#">Exercitation</a>
                         </li>
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a href="#">Ullamco laboris nisi</a>
                         </li>
                         <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.5s">
+                            <i class="fa fa-check" aria-hidden="true"></i>
                             <a href="#">Ut aliqu</a>
                         </li>
                     </ul>
@@ -258,46 +275,45 @@
                           FOOTER
 =========================================================-->
     <footer id="footer">
-        <div class="wrapper">
-            <div class="container">
-                <div class="footer_menu">
-                    <div class="socials">
-                        <ul class="socials1">
-                            <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
-                                <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
-                                        class="fa fa-facebook"></i></a></li>
-                            <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
-                                        class="fa fa-instagram"></i></a></li>
-                        </ul>
-                    </div>
-                    <nav>
-                        <ul>
-                            <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s"><a
-                                    href="index.html">Início</a></li>
-                            <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a
-                                    href="specialties.html">Especialidades</a></li>
-                            <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.3s"><a
-                                    href="agreements.html">Convenções</a></li>
-                            <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.5s"><a
-                                    href="contacts.html">Contactos</a></li>
-                        </ul>
-                    </nav>
+        <div class="container">
+            <div class="footer_menu">
+                <div class="socials">
+                    <ul class="socials1">
+                        <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+                            <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
+                                    class="fa fa-facebook"></i></a></li>
+                        <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
+                                    class="fa fa-instagram"></i></a></li>
+                    </ul>
                 </div>
-                <p class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">Lorem ipsum dolor
-                    sit
-                    amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc.</p>
+                <nav>
+                    <ul>
+                        <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s"><a
+                                href="index.html">Início</a></li>
+                        <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a
+                                href="specialties.html">Especialidades</a></li>
+                        <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.3s"><a
+                                href="agreements.html">Convenções</a></li>
+                        <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.5s"><a
+                                href="contacts.html">Contactos</a></li>
+                    </ul>
+                </nav>
             </div>
-            <div class="privacy-block wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
-                <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year"></span>. <a
-                    href="privacy.html">Política de Privacidade </a><br><a>Design by Francisco Araújo</a>
-            </div>
+            <p class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">Lorem ipsum dolor
+                sit
+                amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc.</p>
+        </div>
+        <div class="privacy-block wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+            <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year"></span>. <a
+                href="privacy.html">Política de Privacidade </a><br><a>Design by Francisco Araújo</a>
         </div>
     </footer>
     <script src="js/app.js"></script>
     <script src="js/carousel.js"></script>
     <script src="js/intersectionObservers.js"></script>
+    <script src="js/headerNavbar.js"></script>
 </body>
 
 </html>
