--- a/gallery.html
+++ b/gallery.html
@@ -220,7 +220,8 @@
                                 <ul class="socials1">
                                     <li class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.1s">
                                         <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
-                                                class="fa fa-facebook"></i></a></li>
+                                                class="fa fa-facebook"></i></a>
+                                    </li>
                                     <li class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.2s"><a
                                             href="#"><i class="fa fa-twitter"></i></a></li>
                                 </ul>
