Started the gallery page

--- a/agreements.html
+++ b/agreements.html
@@ -124,8 +124,8 @@
           <a href="gallery.html">Clínicas</a>
           <div class="dropdown dropdownGallery">
             <ul>
-              <li><i class="fas fa-images"></i><a href="#">Clínica do Porto</a></li>
-              <li><i class="far fa-images"></i><a href="#">Clínica de Santo Tirso</a></li>
+              <li><i class="fas fa-images"></i><a href="gallery.html">Clínica do Porto</a></li>
+              <li><i class="far fa-images"></i><a href="galleryST.html">Clínica de Santo Tirso</a></li>
             </ul>
           </div>
         </li>
@@ -189,8 +189,8 @@
       </div>
     </div>
     <div class="wrapper6 wrapper6__inset1">
-      <div class="box2-wrapper1 fade-in">
-        <div class="insurence">
+      <div class="box2-wrapper1">
+        <div class="insurence fade-in">
           <a href="http://advancecare.pt/" target="_blank">
             <img src="images/advancecare.png" alt="AdvanceCare - Gestão de Serviços de Saúde, S.A." />
           </a>
@@ -204,71 +204,71 @@
       <div class="chevronDown">
         <button><i class="fas fa-chevron-down"> </i></button>
       </div>
-      <div class="box2-wrapper6 slide-in">
-        <div class="insurence">
+      <div class="box2-wrapper6">
+        <div class="insurence fade-in">
           <img src="images/açoreana.png" alt="Açoreana" />
           <p>&brvbar Açoreana</p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/ccmo.jpeg" alt="CCMO-MUTUELLE" />
           <p>&brvbar CCMO-MUTUELLE</p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/cimpor.png" alt="Cimpor - Cimentos de Portugal, S.A." />
           <p>&brvbar Cimpor - Cimentos de Portugal, S.A.</p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/eurovida.jpg" alt="Eurovida – Companhia de Seguros de Vida, S.A" />
           <p>&brvbar Eurovida – Companhia de Seguros de Vida, S.A.</p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/generali.png" alt="Generalicare" />
           <p>&brvbar Generalicare - Companhia de Seguros, S.A.</p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/gnb.png" alt="GNB - Companhia de Seguros, S.A" />
           <p>&brvbar GNB - Companhia de Seguros, S.A.</p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/gps.jpg" alt="Grumo Groupama" />
           <p>&brvbar Grupo Groupama</p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/logo.jpg" alt="Logo" />
           <p>&brvbar Logo Seguros</p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/lusitania.png" alt="Lusitania - Companhia de Seguros, S.A." />
           <p>&brvbar Lusitania - Companhia de Seguros, S.A.</p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/mgen.png" alt="MGEN - Mutuelle Générale de l'Éducation Nationale" />
           <p>&brvbar MGEN - Mutuelle Générale de l'Éducation Nationale</p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/n_seguros.png" alt="N Seguros, S.A" />
           <p>&brvbar N Seguros, S.A</p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/popular.png" alt="Popular Seguros- Companhia de Seguros, S.A. " />
           <p>&brvbar Popular Seguros- Companhia de Seguros, S.A. </p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/real.png" alt="Real Vida Seguros" />
           <p>&brvbar Real Vida Seguros</p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/sams.png"
             alt="SAMS - Serviços de Assistência Médico-Social do Sindicato dos Bancários Sul e Ilhas" />
           <p>&brvbar SAMS - Serviços de Assistência Médico-Social do Sindicato dos Bancários</p>
         </div>
-        <div id="allianz" class="insurence">
+        <div id="allianz" class="insurence fade-in">
           <img src="images/tranquilidade.png" alt="Tranquilidade" />
           <p>&brvbar Tranquilidade</p>
         </div>
       </div>
-      <div class="box2-wrapper1 fade-in">
-        <div class="insurence">
+      <div class="box2-wrapper1">
+        <div class="insurence fade-in">
           <a href="http://www.allianz.pt/" target="_blank"></a>
           <img src="images/allianz.png" alt="Allianz Saúde" />
           <div class="title">
@@ -277,8 +277,8 @@
           </div>
         </div>
       </div>
-      <div id="furureHealth" class="box2-wrapper1 fade-in">
-        <div class="insurence">
+      <div id="furureHealth" class="box2-wrapper1">
+        <div class="insurence fade-in">
           <a href="https://ami.org.pt/" target="_blank">
             <img src="images/ami.png" alt="Assistência Médica Internacional" />
           </a>
@@ -288,8 +288,8 @@
           </div>
         </div>
       </div>
-      <div class="box2-wrapper1 fade-in">
-        <div class="insurence">
+      <div class="box2-wrapper1">
+        <div class="insurence fade-in">
           <a href="http://www.future-healthcare.pt/victoria/rm/rede-medica.html" target="_blank">
             <img src="images/future.png" alt="Future Healthcare" />
           </a>
@@ -304,18 +304,18 @@
       <div class="chevronDown">
         <button><i class="fas fa-chevron-down"> </i></button>
       </div>
-      <div class="box2-wrapper6 slide-in">
-        <div class="insurence">
+      <div class="box2-wrapper6">
+        <div class="insurence fade-in">
           <img src="images/saude.png" alt="Saúde Prime" />
           <p>&brvbar Saúde Prime</p>
         </div>
-        <div id="medicare" class="insurence">
+        <div id="medicare" class="insurence fade-in">
           <img src="images/victoria.png" alt="Victoria" />
           <p>&brvbar Victoria</p>
         </div>
       </div>
-      <div id="medis" class="box2-wrapper1 fade-in">
-        <div class="insurence">
+      <div id="medis" class="box2-wrapper1">
+        <div class="insurence fade-in">
           <a href="https://www.medicare.pt/" target="_blank">
             <img src="images/medicare.jpg" alt="Medicare" />
           </a>
@@ -325,8 +325,8 @@
           </div>
         </div>
       </div>
-      <div class="box2-wrapper1 fade-in">
-        <div class="insurence">
+      <div class="box2-wrapper1">
+        <div class="insurence fade-in">
           <a href="http://www.medis.pt/pt-pt/Pages/default.aspx" target="_blank">
             <img src="images/medis.png" alt="Médis - Companhia Portuguesa de Seguros de Saúde, S.A." />
           </a>
@@ -341,26 +341,26 @@
       <div class="chevronDown">
         <button><i class="fas fa-chevron-down"> </i></button>
       </div>
-      <div class=" box2-wrapper6 slide-in">
-        <div class="insurence">
+      <div class=" box2-wrapper6">
+        <div class="insurence fade-in">
           <img src="images/ageas.png" alt="Ageas Seguros" />
           <p>&brvbar Ageas Seguros</p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/ctt.png" alt="CTT - Médis" />
           <p>&brvbar CTT - Médis</p>
         </div>
-        <div class="insurence">
+        <div class="insurence fade-in">
           <img src="images/liberty.png" alt="Liberty Seguros" />
           <p>&brvbar Liberty Seguros</p>
         </div>
-        <div id="rna" class="insurence">
+        <div id="rna" class="insurence fade-in">
           <img src="images/zurich.png" alt="Zurich" />
           <p>&brvbar Zurich</p>
         </div>
       </div>
-      <div id="samsSib" class="box2-wrapper1 fade-in">
-        <div class="insurence">
+      <div id="samsSib" class="box2-wrapper1">
+        <div class="insurence fade-in">
           <a href="http://www.rnamedical.pt/pt/home/" target="_blank">
             <img src="images/rna.png" alt="RNA Medical" />
           </a>
@@ -371,8 +371,8 @@
           </div>
         </div>
       </div>
-      <div class="box2-wrapper1 fade-in">
-        <div class="insurence">
+      <div class="box2-wrapper1">
+        <div class="insurence fade-in">
           <a href="http://www.sibanca.pt/" target="_blank">
             <img src="images/sams_sib.png" alt="SAMS-SIB" />
           </a>
