--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                     <a href="gallery.html">Clínicas</a>
                     <div class="dropdown dropdownGallery">
                         <ul>
-                            <li><i class="fas fa-images"></i><a href="#">Clínica do Porto</a></li>
-                            <li><i class="far fa-images"></i><a href="#">Clínica de Santo Tirso</a></li>
+                            <li><i class="fas fa-images"></i><a href="gallery.html">Clínica do Porto</a></li>
+                            <li><i class="far fa-images"></i><a href="galleryST.html">Clínica de Santo Tirso</a></li>
                         </ul>
                     </div>
                 </li>
