--- a/specialties.html
+++ b/specialties.html
@@ -107,8 +107,8 @@
                     <a href="gallery.html">Clínicas</a>
                     <div class="dropdown dropdownGallery">
                         <ul>
-                            <li><i class="fas fa-images"></i><a href="#">Clínica do Porto</a></li>
-                            <li><i class="far fa-images"></i><a href="#">Clínica de Santo Tirso</a></li>
+                            <li><i class="fas fa-images"></i><a href="gallery.html">Clínica do Porto</a></li>
+                            <li><i class="far fa-images"></i><a href="galleryST.html">Clínica de Santo Tirso</a></li>
                         </ul>
                     </div>
                 </li>
@@ -426,21 +426,6 @@
                         </li>
                         <li data-wow-duration="1s" data-wow-delay="0.3s">
                             <a href="#">Antenatal check-up</a>
-                        </li>
-                        <li data-wow-duration="1s" data-wow-delay="0.4s">
-                            <a href="#">Screening for Down’s syndrome</a>
-                        </li>
-                        <li data-wow-duration="1s" data-wow-delay="0.5s">
-                            <a href="#">Stem cells collection</a>
-                        </li>
-                        <li data-wow-duration="1s" data-wow-delay="0.6s">
-                            <a href="#">Fetal monitoring</a>
-                        </li>
-                        <li data-wow-duration="1s" data-wow-delay="0.7s">
-                            <a href="#">Postnatal check-up</a>
-                        </li>
-                        <li data-wow-duration="1s" data-wow-delay="0.8s">
-                            <a href="#">Lactation counseling</a>
                         </li>
                     </ul>
                 </div>
