--- a/galleryST.html
+++ b/galleryST.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
-    <title>Contacts</title>
+    <title>Galeria Santo Tirso</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -124,7 +124,7 @@
                     <div class="dropdown dropdownGallery">
                         <ul>
                             <li><i class="fas fa-images"></i><a href="gallery.html">Clínica do Porto</a></li>
-                            <li><i class="far fa-images"></i><a href="galleryST.html">Clínica de Santo Tirso</a></li>
+                            <li><i class="far fa-images"></i><a href="#">Clínica de Santo Tirso</a></li>
                         </ul>
                     </div>
                 </li>
@@ -155,56 +155,85 @@
         </div>
     </header>
 
-
     <!--========================================================
                           CONTENT
 =========================================================-->
-    <section id="content" class="common">
-        <div class="wrapper1 wrapper1__inset3">
-            <div class="container">
-                <div class="row">
-                    <div class="grid_12">
-                        <div class="heading1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
-                            <h2>How to find us</h2>
-                        </div>
-                        <div class="map-wrapper1 map-wrapper1__offset1">
-                            <div class="google-map2" id="google-map"></div>
-                        </div>
-                        <p class="tac wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">Lorem ipsum dolor sit
-                            amet
-                            conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in
-                            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                            laborum.
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum
-                            molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
-
-                        <div class="row">
-                            <div class="grid_4 preffix_4">
-                                <address class="our-address wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
-                                    <span>Rua D. Nuno Alvares Pereira 11, 1º sala<br />8 St. Tirso</span>
-                                </address>
-                                <div class="row">
-                                    <div class="grid_4 preffix_1">
-                                        <address class="contacts-address wow fadeIn" data-wow-duration="1s"
-                                            data-wow-delay="0.2s">
-                                            <span class="wrapper"><span class="wide">Telefone:</span><a
-                                                    href="tel:00351252850480">+351 252 850 480</a></span>
-                                            <span class="wrapper"><span class="wide">Fax:</span>+351 252 833 109</span>
-                                            <span class="wrapper">E-mail:
-                                                <a href="mailto:geral@clinicagynebe.com.pt"
-                                                    class="simple-link">geral@clinicagynebe.com.pt</a>
-                                            </span>
-                                        </address>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <section id="content">
+        <div class="wrapper1">
+            <div class="heading1 fade-in">
+                <h2>Clínica Gynébe de Santo Tirso</h2>
+            </div>
+            <div class="box2-wrapper2">
+                <h6 class="fade-in"><a href="#">Aliquam
+                        dapibus tincidunt metus praesent justo
+                        quis, lobortis dignissim.</a></h6>
+                <p class="fade-in">Lorem ipsum dolor sit
+                    amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                    irure
+                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                    pariatur.
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetuer adipiscing
+                    elit.
+                    Praesent vestibulum
+                    molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.
+                    Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient
+                    montes,
+                    nascetur ridiculus mus.</p>
+            </div>
+        </div>
+        <div class="box6-wrapper1__inset1">
+            <div class="box6 img18 fade-in">
+                <img src="images/gynebeST/EVO_1810.jpg" alt="Sala de Espera" />
+                <span class="img-content-hover">
+                    <h5>Sala de</h5>
+                    <h4>Espera</h4>
+                </span>
+            </div>
+            <div class="box6 img19 fade-in">
+                <img src="images/gynebeST/EVO_1813.jpg" alt="Sala de Espera" />
+                <span class="img-content-hover">
+                    <h5>Sala de</h5>
+                    <h4>Espera</h4>
+                </span>
+            </div>
+            <div class="box6 img20 fade-in">
+                <img src="images/gynebeST/EVO_1818.jpg" alt="Sala de Espera" />
+                <span class="img-content-hover">
+                    <h5>Sala de</h5>
+                    <h4>Espera</h4>
+                </span>
+            </div>
+            <div class="box6 img21 fade-in">
+                <img src="images/gynebeST/EVO_1826.jpg" alt="Logo" />
+                <span class="img-content-hover">
+                    <h5>Logo da</h5>
+                    <h4>Clínica Gynébe</h4>
+                </span>
+            </div>
+            <div class="box6 img22 fade-in">
+                <img src="images/gynebeST/EVO_1847.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                <span class="img-content-hover">
+                    <h5>Sala de</h5>
+                    <h4>Ginecologia e Obstetrícia</h4>
+                </span>
+            </div>
+            <div class="box6 img23 fade-in">
+                <img src="images/gynebeST/EVO_1855.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                <span class="img-content-hover">
+                    <h5>Sala de</h5>
+                    <h4>Ginecologia e Obstetrícia</h4>
+                </span>
+            </div>
+            <div class="box6 img24 fade-in">
+                <img src="images/gynebeST/EVO_1859.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                <span class="img-content-hover">
+                    <h5>Sala de</h5>
+                    <h4>Ginecologia e Obstetrícia</h4>
+                </span>
             </div>
         </div>
     </section>
@@ -250,8 +279,7 @@
     <script src="js/app.js"></script>
     <script src="js/intersectionObservers.js"></script>
     <script src="js/headerNavbar.js"></script>
-</body>
-
+    <script src="js/gallery.js"></script>
 </body>
 
 </html>
