Started the contacts page and added map to them

--- a/agreements.html
+++ b/agreements.html
@@ -142,6 +142,13 @@
             </ul>
           </div>
         </li>
+        <ul class="socials2">
+          <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+            <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i class="fa fa-facebook"></i></a>
+          </li>
+          <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
+                class="fa fa-instagram"></i></a></li>
+        </ul>
       </ul>
     </nav>
     <div class="phone slide-in">
