--- a/gallery.html
+++ b/gallery.html
@@ -141,6 +141,14 @@
                         </ul>
                     </div>
                 </li>
+                <ul class="socials2">
+                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+                        <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
+                                class="fa fa-facebook"></i></a>
+                    </li>
+                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
+                                class="fa fa-instagram"></i></a></li>
+                </ul>
             </ul>
         </nav>
         <div class="phone slide-in">
@@ -210,7 +218,7 @@
             <div class="box6 img4 fade-in">
                 <img src="images/gynebePorto/EVO_1711.jpg" alt="Corredor" />
                 <span class="img-content-hover">
-                    <h4>Corredor</h4>
+                    <h4>Área Interna</h4>
                 </span>
             </div>
             <div class="box6 img5 fade-in">
