--- a/contacts.html
+++ b/contacts.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
+
     <!-- build:css({.tmp,src}) css/style.css -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -141,6 +144,14 @@
                         </ul>
                     </div>
                 </li>
+                <ul class="socials2">
+                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+                        <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
+                                class="fa fa-facebook"></i></a>
+                    </li>
+                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
+                                class="fa fa-instagram"></i></a></li>
+                </ul>
             </ul>
         </nav>
         <div class="phone slide-in">
@@ -160,51 +171,32 @@
 =========================================================-->
     <section id="content" class="common">
         <div class="wrapper1 wrapper1__inset3">
-            <div class="container">
-                <div class="row">
-                    <div class="grid_12">
-                        <div class="heading1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
-                            <h2>How to find us</h2>
-                        </div>
-                        <div class="map-wrapper1 map-wrapper1__offset1">
-                            <div class="google-map2" id="google-map"></div>
-                        </div>
-                        <p class="tac wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">Lorem ipsum dolor sit
-                            amet
-                            conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in
-                            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                            laborum.
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum
-                            molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
-
-                        <div class="row">
-                            <div class="grid_4 preffix_4">
-                                <address class="our-address wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
-                                    <span>Rua D. Manuel II 33, 4º sala 44,<br />4050-345 Porto.</span>
-                                </address>
-                                <div class="row">
-                                    <div class="grid_4 preffix_1">
-                                        <address class="contacts-address wow fadeIn" data-wow-duration="1s"
-                                            data-wow-delay="0.2s">
-                                            <span class="wrapper"><span class="wide">Telefone:</span><a
-                                                    href="tel:00351225432135">+351 225 432 135/6</a></span>
-                                            <span class="wrapper"><span class="wide">Fax:</span>+351 225 432 209</span>
-                                            <span class="wrapper">E-mail:
-                                                <a href="mailto:geral@clinicagynebe.com.pt"
-                                                    class="simple-link">geral@clinicagynebe.com.pt</a>
-                                            </span>
-                                        </address>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="heading1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+                <h2>Clínica Gynébe do Porto</h2>
             </div>
+            <p class="tac wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">Lorem ipsum dolor sit
+                amet
+                conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum
+                molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+            <div id="map"></div>
+            <address class="our-address wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+                <span>Rua D. Manuel II 33, 4º sala 44,<br />4050-345 Porto.</span>
+            </address>
+            <address class="contacts-address wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+                <span class="wrapper-info"><span class="wide">Telefone:</span><a href="tel:00351225432135">+351
+                        225 432 135/6</a></span>
+                <span class="wrapper-info"><span class="wide">Fax:</span>+351 225 432 209</span>
+                <span class="wrapper-info">E-mail:
+                    <a href="mailto:geral@clinicagynebe.com.pt" class="simple-link">geral@clinicagynebe.com.pt</a>
+                </span>
+            </address>
         </div>
     </section>
 
@@ -249,6 +241,7 @@
     <script src="js/app.js"></script>
     <script src="js/intersectionObservers.js"></script>
     <script src="js/headerNavbar.js"></script>
+    <script src="js/mapPorto.js"></script>
 </body>
 
 </body>
