Fixed bugs and updated the agreements page

--- a/agreements.html
+++ b/agreements.html
@@ -171,7 +171,7 @@
   <section id="content">
     <div class="wrapper6">
       <div class="heading1 fade-in">
-        <h2>Acordos e Convenções</h2>
+        <h2>Convenções e Acordos</h2>
       </div>
       <div class="box2-wrapper2">
         <h6 class="fade-in"><a href="#">Aliquam
@@ -284,17 +284,6 @@
           </div>
         </div>
       </div>
-      <div id="furureHealth" class="box2-wrapper1">
-        <div class="insurence fade-in">
-          <a href="https://ami.org.pt/" target="_blank">
-            <img src="images/ami.png" alt="Assistência Médica Internacional" />
-          </a>
-          <div class="title">
-            <h3 class="h3__inset1">Assistência Médica Internacional</h3>
-            <p>Visitar o <a href="https://ami.org.pt/" target="_blank">site AMI</a></p>
-          </div>
-        </div>
-      </div>
       <div class="box2-wrapper1">
         <div class="insurence fade-in">
           <a href="http://www.future-healthcare.pt/victoria/rm/rede-medica.html" target="_blank">
@@ -386,6 +375,17 @@
           <div class="title">
             <h3 class="h3__inset1">SAMS-SIB</h3>
             <p>Visitar o <a href="http://www.sibanca.pt/" target="_blank">site SAMS-SIB</a></p>
+          </div>
+        </div>
+      </div>
+      <div id="furureHealth" class="box2-wrapper1">
+        <div class="insurence fade-in">
+          <a href="https://ami.org.pt/" target="_blank">
+            <img src="images/ami.png" alt="Assistência Médica Internacional" />
+          </a>
+          <div class="title">
+            <h3 class="h3__inset1">Assistência Médica Internacional</h3>
+            <p>Visitar o <a href="https://ami.org.pt/" target="_blank">site AMI</a></p>
           </div>
         </div>
       </div>
